feat: 회원가입 api를 GET이 아닌 POST 메서드로 변경
- GET으로 회원가입 요청 시 405 에러 메시지를 반환하는 로직 구현
- 회원가입을 POST로 진행하는 로직 구현