@@ -26,17 +26,19 @@ class UserProcessorTest {
     private final UserProcessor userProcessor = new UserProcessor();
 
     @Nested
-    class GET_요청_시 {
+    class POST_요청_시 {
 
         @Test
         void 유효한_회원가입_쿼리_파라미터가_있는_경우_초기_페이지로_리다이렉트한다() throws Exception {
-            HttpRequest httpRequest = new HttpRequest(HttpMethod.GET,
+            HttpRequest httpRequest = new HttpRequest(HttpMethod.POST,
                     new URI("/create"),
                     Map.of("userId", "1", "name", "JohnDoe", "email", "johndoe@example.com", "password", "secret"),
-                    HttpVersion.HTTP_1_1, Collections.emptyMap(), "");
+                    HttpVersion.HTTP_1_1,
+                    Collections.emptyMap(),
+                    "");
             HttpResponse httpResponse = new HttpResponse();
 
-            userProcessor.processGet(httpRequest, httpResponse);
+            userProcessor.processPost(httpRequest, httpResponse);
 
             assertAll(
                     () -> assertEquals(HttpStatus.MOVED_PERMANENTLY, httpResponse.getStatus()),
@@ -46,20 +48,20 @@ class UserProcessorTest {
     }
 
     @Nested
-    class POST_요청_시 {
+    class 지원하지_않는_HTTP_METHOD_예외가_발생한다 {
 
         @Test
-        void 지원하지_않는_HTTP_METHOD_예외가_발생한다() throws Exception {
-            HttpRequest httpRequest = new HttpRequest(HttpMethod.POST,
+        void GET_요청하는_경우() throws Exception {
+            HttpRequest httpRequest = new HttpRequest(HttpMethod.GET,
                     new URI("/create"),
-                    Collections.emptyMap(),
+                    Map.of("userId", "1", "name", "JohnDoe", "email", "johndoe@example.com", "password", "secret"),
                     HttpVersion.HTTP_1_1,
                     Collections.emptyMap(),
                     "");
             HttpResponse httpResponse = new HttpResponse();
 
             assertThrows(UnSupportedHttpMethodException.class,
-                    () -> userProcessor.processPost(httpRequest, httpResponse));
+                    () -> userProcessor.processGet(httpRequest, httpResponse));
         }
     }
 }
